Fixed image gif alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,6 +34,10 @@ img {
     height: auto;
 }
 
+pre img {
+    display: block;
+}
+
 table {
     display: block;
     max-width: 100%;
